docs in the whole project

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 artifacts {
-
+    archives sourcesJar
+    archives javadocJar
 }
 
 repositories {
