--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '8.0.0'
 }
 
 group = 'de.derioo'
@@ -19,6 +20,10 @@ repositories {
     }
 
     maven {
+        name = "commandFramework"
+        url = "https://nexus.derioo.de/nexus/content/repositories/CommandFramework"
+    }
+    maven {
         url = uri('https://libraries.minecraft.net/')
     }
 
@@ -36,7 +41,16 @@ dependencies {
 
     testCompileOnly 'org.projectlombok:lombok:1.18.28'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
+    implementation 'de.derioo:CommandFramework:2.1-RELEASE'
 }
+
+
+shadowJar {
+    exclude('org/intellij/**')
+    exclude('org/jetbrains/**')
+}
+
+shadowJar.finalizedBy(tasks.build)
 
 def targetJavaVersion = 17
 java {
